[tool.poetry]
name = "testsmith"
version = "1.1.5"
description = "A project-agnostic Python CLI tool that reads any source file, analyzes its dependency graph via AST parsing, and generates everything you need to start testing"
authors = ["TestSmith Team"]
readme = "README.md"
packages = [{include = "testsmith", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
pytest = "^8.0"
pytest-mock = "^3.12"
black = "^24.0"
ruff = "^0.2"
pytest-cov = "^4.1"
tomli = "^2.0"
anthropic = "^0.42.0"
openai = "^1.0"
watchdog = "^3.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.0"
python-semantic-release = "^9.0.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.0"

[tool.poetry.scripts]
testsmith = "testsmith.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src/testsmith --cov-report=term-missing"
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__"]

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '(\.git|\.mypy_cache|\.tox|\.venv|venv|__pycache__|tests/fixtures/sample_sources/syntax_error_module\.py)'

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["tests/fixtures/sample_sources/syntax_error_module.py"]

[tool.poe.tasks]
# Testing
test = "pytest tests/ --cov=src/testsmith --cov-report=term-missing -v"
test-unit = "pytest tests/unit/ -v"
test-integration = "pytest tests/integration/ -v"
test-fast = "pytest tests/ -x --ff"  # Stop on first failure, run failed tests first

# Linting & Formatting
lint = "ruff check src/ tests/"
format = "black src/ tests/"
format-check = "black --check src/ tests/"
check = ["lint", "format-check", "test"]  # Run all checks

# Building
build = "pyinstaller testsmith.spec --clean --noconfirm"
build-test = { shell = "pyinstaller testsmith.spec --clean --noconfirm && ./dist/testsmith --version" }

# Cleaning
clean = { shell = "rm -rf build/ dist/ .pytest_cache/ .coverage htmlcov/ .ruff_cache/ **/__pycache__" }

# Development
install = "poetry install --with dev,build"
version = { shell = "python -c 'from testsmith import __version__; print(__version__)'" }
release = "semantic-release version --print"  # Preview next version
release-publish = "semantic-release version"  # Bump version and create tag

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["src/testsmith/__init__.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_parser = "conventional"
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
